@@ -1,3 +1,4 @@
+/* -*- Mode:csharp; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
 /***************************************************************************
  *  Xine.cs
  *
