@@ -1,3 +1,7 @@
+2006-07-28  Ivan N. Zlatev  <contact i-nZ.net>
+
+	* src/XinePlayerEngine.cs: Updated SetEqualizerGain to normalize the frequency.
+	
 2006-07-22  Ivan N. Zlatev  <contact i-nZ.net>
 
 	* src/XinePlayerEngine.cs: Untabify.
